[gd_scene load_steps=5 format=3 uid="uid://cgknbod5rvlhi"]

[ext_resource type="Script" uid="uid://b2k7c1wopktid" path="res://Scripts/Laser.gd" id="1_rrwjf"]
[ext_resource type="Texture2D" path="res://Imatges/Atlas/laserBlue01.tres" id="2_7ahel"]
[ext_resource type="AudioStream" uid="uid://cgmpk33n3x4gv" path="res://Sons/tocat.wav" id="3_wn6u4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8m26c"]
radius = 4.0
height = 54.0

[node name="Laser" type="Area2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_rrwjf")

[node name="SpriteLaser" type="Sprite2D" parent="."]
texture = ExtResource("2_7ahel")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_8m26c")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(4.76837e-07, 1.90735e-06)
scale = Vector2(1.8, 3.6)

[node name="SoFi" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_wn6u4")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="finished" from="SoFi" to="." method="_on_so_fi_finished"]
